src/objects/BLP_Quick_Link__c.object
<CustomObject>
    <fields>
        <fullName>BLP_Affiliate__c</fullName>
        <label>Affiliate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Global_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLP_Link_URL__c</fullName>
        <label>Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BLP_Name_of_Link__c</fullName>
        <label>Name of Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Profile__c</fullName>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Training_Path__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Path</label>
        <referenceTo>BLP_Training_Path__c</referenceTo>
        <relationshipName>BLP_QuickLinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quick Link</label>
    <listViews>
        <fullName>All</fullName>
        <columns>BLP_Name_of_Link__c</columns>
        <columns>BLP_Link_URL__c</columns>
        <columns>BLP_Global_Link__c</columns>
        <columns>BLP_Training_Path__c</columns>
        <columns>BLP_Profile__c</columns>
        <columns>BLP_Affiliate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>QL-{0000}</displayFormat>
        <label>BLP Quick Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quick Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>